# ds_tools

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  1.3  404.html  CHANGELOG.md  CLA.md  CODEOWNERS.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: custom_issue_report.md
.github/scripts/: combine_coverage.py
.github/workflows/: python-publish.yml
api/: index.html
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs/api/: index.html
docs/search/: search_index.json
research_results/: adaptive_bayes.py  benchmark_adaptive_bayes.py  mae_benchmarks_research.py  metrics_comparison.docx  r2_benchmarks_research.py  rmse_benchmarks_research.py
search/: search_index.json
src/: __init__.py  distance.py  ds_tool-checkpoint.py  ds_tool.py  metrics.py  models.py
src/ds_tool/: __init__.py  ds_tool.py
src/ds_tools/: ds_tool.py  metrics.py
src_docs/: index.md
src_docs/api/: ds_tool.md  index.md
src_old/: ds_tool_v01.py
tests/: __init__.py  code_checking_dstool.py  conftest.py  test_add_missing.py  test_alphanum.py  test_category_stats.py  test_chatterjee.py  test_check_ninf.py  test_compute_metrics.py  test_corr_matrix.py  test_describe_cat.py  test_describe_num.py  test_df_stats.py  test_distance.py  test_distance_additional.py  test_distance_numba_cupy.py  test_entropy.py  test_evaluate_cls.py  test_function_list.py  test_generate_dist.py  test_generate_from_metrics.py  test_grubbs.py  test_kl_divergence.py  test_labeling.py  test_metrics.py  test_min_max.py  test_models.py  test_normality.py  test_outliers.py  test_plot_cm.py  test_plot_visualization.py  test_sparse_calc.py  test_stationarity.py  test_trials_res_df.py  test_zip_io.py
