[project]
name = "dscience_tools"
version = "1.0.9"
description = "DSTools: Data Science Tools Library"
readme = "README.md"

authors = [
  { name="Sergii Kavun", email="kavserg@gmail.com" }
]

maintainers = [
  { name="Sergii Kavun", email="kavserg@gmail.com" }
]

license = {text = "MIT License"}
dependencies = ["pandas<=2.2.3,>=0.25.0", "numpy<=2.2.0,>=1.22.0"]
requires-python = ">=3.6.0"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dynamic = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[project.urls]
Homepage = "https://github.com/s-kav/ds_tools"
Documentation = "https://s-kav.github.io/ds_tools/"
Repository = "https://github.com/s-kav/ds_tools.git"
"Source Code" = "https://github.com/s-kav/ds_tools/tree/main/src"
"Bug Tracker" = "https://github.com/s-kav/ds_tools/issues" 

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[per-file-ignores]
"tests/*.py" = ["D100", "D103", "D104", "D105"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:jupyter_core.*",
    "ignore::DeprecationWarning:numpy.*"
]
testpaths = ["tests"]
pythonpath = [
  ".",
  "src",
]
