[project]
name = "dscience-tools"
version = "2.3.4"
description = "DSTools: Data Science Tools Library, library of helpful functions for various data science research stages"
readme = "README.md"

authors = [
  { name="Sergii Kavun", email="kavserg@gmail.com" }
]

maintainers = [
  { name="Sergii Kavun", email="kavserg@gmail.com" }
]

license = {text = "Apache License 2.0"}
dependencies = [
    "numpy>=1.22.0,<=2.2.0",
    "pandas>=0.25.0,<=2.2.3",
    "polars>=0.18.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "psutil>=5.8.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "pydantic>=2.0",
]
requires-python = ">=3.9.0"

classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: Apache Software License",
]

dynamic = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

performance-numba = [
    "numba",
]

performance-cupy = [
    "cupy-cuda13x",
]

performance = [
    "cupy-cuda13x",
    "numba",
]

lint = [
    "black>=26.3.1",
    "ruff==0.12.12",
]

[project.urls]
Homepage = "https://github.com/s-kav/ds_tools"
Documentation = "https://s-kav.github.io/ds_tools/"
Repository = "https://github.com/s-kav/ds_tools.git"
"Source Code" = "https://github.com/s-kav/ds_tools/tree/main/src"
"Bug Tracker" = "https://github.com/s-kav/ds_tools/issues" 

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
fast = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D103", "D104", "D105"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:jupyter_core.*",
    "ignore::DeprecationWarning:numpy.*"
]
testpaths = ["tests"]
pythonpath = [
  ".",
  "src",
]

[tool.coverage.run]

source = ["src"]
# IMPORTANT: This forces coverage to write relative paths that are understood by Codecs
relative_files = true
branch = true

[tool.coverage.report]
# Exclude empty files or test files from the report
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    ".*_numba\\(",
    ".*_cupy\\(",
    'def .*_numba',
    'def .*_cupy',
    "if not NUMBA_AVAILABLE:",
    "if not CUPY_AVAILABLE:",
    "if HAS_NUMBA:",
    "if HAS_CUPY:",
]
