[metadata]
name = dscience_tools
version = 2.0.0
author = Sergii Kavun
author_email = kavserg@gmail.com
description = A library of helpful functions for various data science research stages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-kav/ds_tools
license = PolyForm-Noncommercial-1.0.0 OR Commercial
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: PolyForm-Noncommercial-1.0.0 OR Commercial
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    polars
    matplotlib
    seaborn
    scipy
    psutil
    os
    cupy
    numba
    warnings
    scikit-learn
    statsmodels
    pydantic>=2.0

[options.packages.find]
where = src
