[metadata]
name = dscience_tools
version = 2.0.1
author = Sergii Kavun
author_email = kavserg@gmail.com
description = A library of helpful functions for various data science research stages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/s-kav/ds_tools
license = PolyForm-Noncommercial-1.0.0 OR Commercial
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: PolyForm-Noncommercial-1.0.0 OR Commercial
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering

[options]
package_dir =
   ds_tools = src
packages = ds_tools
python_requires = >=3.9
install_requires =
    numpy
    pandas
    polars
    matplotlib
    seaborn
    scipy
    psutil
    scikit-learn
    statsmodels
    pydantic>=2.0

[options.extras_require]
performance-numba =
    numba
performance-cupy =
    cupy-cuda13x
performance =
    %(performance-numba)s
    %(performance-cupy)s
test =
    pytest
    pytest-cov
    pytest-mock
    
[options.packages.find]
where = src
